[package]
name = "queue"
description = "A Slack Bot to keep track of people waiting in line for a 3D printer"
version = "0.1.0"
authors = ["Joey Territo <jtt9340@rit.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "actix_main"
path = "src/bin/main.rs"

[lib]
name = "print_queue"
path = "src/lib.rs"
test = true

[[example]]
name = "actix_example"
path = "src/examples/example.rs"

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
reqwest = "0.9.24"
serde = "1.0.102"
serde_json = "1.0.41"
