[package]
name = "queue"
description = "A Slack Bot to keep track of people waiting in line for a 3D printer"
version = "0.3.0"
authors = ["Joey Territo <jtt9340@rit.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "slack_main"
path = "src/bin/main.rs"

[lib]
name = "print_queue"
path = "src/lib.rs"
test = true

[[example]]
name = "slack_example"
path = "src/examples/example.rs"

[dependencies]
slack = "0.23.0"
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }